{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 66,
  "lineage": "68462a72-1640-dd7d-f453-dd2c43962a27",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:095985447969:subnet/subnet-09dfd042",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "id": "subnet-09dfd042",
            "map_public_ip_on_launch": true,
            "owner_id": "095985447969",
            "state": "available",
            "vpc_id": "vpc-37f6664f"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:095985447969:subnet/subnet-f1799b89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-f1799b89",
            "map_public_ip_on_launch": true,
            "owner_id": "095985447969",
            "state": "available",
            "vpc_id": "vpc-37f6664f"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:095985447969:subnet/subnet-25897578",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-25897578",
            "map_public_ip_on_launch": true,
            "owner_id": "095985447969",
            "state": "available",
            "vpc_id": "vpc-37f6664f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:095985447969:vpc/vpc-37f6664f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-340ee64f",
            "default_route_table_id": "rtb-44d0a23f",
            "default_security_group_id": "sg-0402ec42",
            "dhcp_options_id": "dopt-31dc5549",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-37f6664f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-44d0a23f",
            "owner_id": "095985447969"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0edf3b95e26a682df",
            "arn": "arn:aws:ec2:us-west-2:095985447969:instance/i-0f70893a2838f2059",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-app-host",
            "id": "i-0f70893a2838f2059",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-app-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-037bb4afbffea7e21",
            "private_dns": "ip-172-31-60-105.us-west-2.compute.internal",
            "private_ip": "172.31.60.105",
            "public_dns": "ec2-54-213-159-196.us-west-2.compute.amazonaws.com",
            "public_ip": "54.213.159.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0f9613beeb5b7cd3c",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-app-common",
              "udagram-app-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09dfd042",
            "tags": {
              "Name": "udagram-app-control_plane-1",
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0807dddcf5d28200f",
              "sg-08b921093874876b7"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0edf3b95e26a682df",
            "arn": "arn:aws:ec2:us-west-2:095985447969:instance/i-069aaa36dfd261a5b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-app-host",
            "id": "i-069aaa36dfd261a5b",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-app-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-094d9dc0505b229cd",
            "private_dns": "ip-172-31-29-200.us-west-2.compute.internal",
            "private_ip": "172.31.29.200",
            "public_dns": "ec2-54-200-158-132.us-west-2.compute.amazonaws.com",
            "public_ip": "54.200.158.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0f1f817a8f92ca8c3",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-app-common",
              "udagram-app-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-f1799b89",
            "tags": {
              "Name": "udagram-app-control_plane-2",
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0807dddcf5d28200f",
              "sg-08b921093874876b7"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0edf3b95e26a682df",
            "arn": "arn:aws:ec2:us-west-2:095985447969:instance/i-0281c3b5ff230f600",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-app-host",
            "id": "i-0281c3b5ff230f600",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-app-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0404adf393877a158",
            "private_dns": "ip-172-31-7-16.us-west-2.compute.internal",
            "private_ip": "172.31.7.16",
            "public_dns": "ec2-34-213-40-92.us-west-2.compute.amazonaws.com",
            "public_ip": "34.213.40.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0fba0d3cb8a665847",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-app-common",
              "udagram-app-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-25897578",
            "tags": {
              "Name": "udagram-app-control_plane-3",
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0807dddcf5d28200f",
              "sg-08b921093874876b7"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:095985447969:loadbalancer/net/udagram-app-api-lb/40a980ba0f84587c",
            "arn_suffix": "net/udagram-app-api-lb/40a980ba0f84587c",
            "dns_name": "udagram-app-api-lb-40a980ba0f84587c.elb.us-west-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:095985447969:loadbalancer/net/udagram-app-api-lb/40a980ba0f84587c",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "udagram-app-api-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09dfd042"
              },
              {
                "subnet_id": "subnet-25897578"
              },
              {
                "subnet_id": "subnet-f1799b89"
              }
            ],
            "subnets": [
              "subnet-09dfd042",
              "subnet-25897578",
              "subnet-f1799b89"
            ],
            "tags": {
              "Cluster": "udagram-app",
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "vpc_id": "vpc-37f6664f",
            "zone_id": "Z18D5FSROUN65G"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:095985447969:listener/net/udagram-app-api-lb/40a980ba0f84587c/10440d875244a970",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:095985447969:targetgroup/udagram-app-api/600a8761e49255c0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:095985447969:listener/net/udagram-app-api-lb/40a980ba0f84587c/10440d875244a970",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:095985447969:loadbalancer/net/udagram-app-api-lb/40a980ba0f84587c",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:095985447969:targetgroup/udagram-app-api/600a8761e49255c0",
            "arn_suffix": "targetgroup/udagram-app-api/600a8761e49255c0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:095985447969:targetgroup/udagram-app-api/600a8761e49255c0",
            "lambda_multi_value_headers_enabled": false,
            "name": "udagram-app-api",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-37f6664f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "control_plane_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:095985447969:targetgroup/udagram-app-api/600a8761e49255c0-20200221030610324500000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:095985447969:targetgroup/udagram-app-api/600a8761e49255c0",
            "target_id": "i-0f70893a2838f2059"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:095985447969:targetgroup/udagram-app-api/600a8761e49255c0-20200221030610253600000001",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:095985447969:targetgroup/udagram-app-api/600a8761e49255c0",
            "target_id": "i-069aaa36dfd261a5b"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:095985447969:targetgroup/udagram-app-api/600a8761e49255c0-20200221030610291700000002",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:095985447969:targetgroup/udagram-app-api/600a8761e49255c0",
            "target_id": "i-0281c3b5ff230f600"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:095985447969:security-group/sg-08b921093874876b7",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b921093874876b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "udagram-app-common",
            "name_prefix": null,
            "owner_id": "095985447969",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-37f6664f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:095985447969:security-group/sg-0807dddcf5d28200f",
            "description": "cluster control_planes",
            "egress": [],
            "id": "sg-0807dddcf5d28200f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "udagram-app-control_planes",
            "name_prefix": null,
            "owner_id": "095985447969",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/udagram-app": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-37f6664f"
          }
        }
      ]
    }
  ]
}